--- a/template/application.yml
+++ b/template/application.yml
@@ -22,7 +22,10 @@ spring:
       repositories:
         enabled: false
       port: 6379
-
+    mongodb:
+      uri: mongodb://root:rootpassword@localhost:27017/simple_db?authSource=admin
+  elasticsearch:
+    uris: http://localhost:9200
 logging:
   level:
     root: info
