--- a/template/application.yml
+++ b/template/application.yml
@@ -13,8 +13,8 @@ spring:
       maximum-pool-size: 10
       max-lifetime: 1800000
   jackson:
-    serialization:
-      write-dates-as-timestamps: true
+#    serialization:
+#      write-dates-as-timestamps: true
     default-property-inclusion: NON_NULL
   data:
     redis:
